Added Login Feature

--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -29,3 +29,10 @@ code {
   display: flex;
   flex-direction: column;
 }
+.center-form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100%;
+}
